junit 테스트 추가.

--- a/pom.xml
+++ b/pom.xml
@@ -6,6 +6,13 @@
 	<version>0.0.1-SNAPSHOT</version>
 	
 	<dependencies>
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>4.12</version>
+			<scope>test</scope>
+		</dependency>
+		
 		<!-- https://mvnrepository.com/artifact/org.xerial/sqlite-jdbc -->
 		<dependency>
 		    <groupId>org.xerial</groupId>
@@ -16,6 +23,7 @@
 	
 	<build>
 		<sourceDirectory>src</sourceDirectory>
+		<testSourceDirectory>src/team/balam/util/sqlite/test</testSourceDirectory>
 		<plugins>
 			<plugin>
 				<artifactId>maven-compiler-plugin</artifactId>
