--- a/pom.xml
+++ b/pom.xml
@@ -4,6 +4,10 @@
 	<groupId>team.balam</groupId>
 	<artifactId>SQLite-Helper</artifactId>
 	<version>0.2.0-SNAPSHOT</version>
+
+    <properties>
+        <github.global.server>github</github.global.server>
+    </properties>
 	
 	<dependencies>
 		<dependency>
@@ -19,6 +23,14 @@
 		    <version>3.16.1</version>
 		</dependency>
 	</dependencies>
+
+    <distributionManagement>
+        <repository>
+            <id>internal.repo</id>
+            <name>Temporary Staging Repository</name>
+            <url>file://${project.build.directory}/mvn-repo</url>
+        </repository>
+    </distributionManagement>
 	
 	<build>
         <plugins>
@@ -35,6 +47,43 @@
                     <source>1.6</source>
                     <target>1.6</target>
                 </configuration>
+            </plugin>
+            <plugin>
+                <artifactId>maven-deploy-plugin</artifactId>
+                <version>2.8.1</version>
+                <configuration>
+                    <altDeploymentRepository>internal.repo::default::file://${project.build.directory}/mvn-repo</altDeploymentRepository>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>com.github.github</groupId>
+                <artifactId>site-maven-plugin</artifactId>
+                <version>0.12</version>
+                <configuration>
+                    <message>Creating site for ${project.version}</message>
+                    <outputDirectory>${project.build.directory}/mvn-repo</outputDirectory>
+                    <branch>refs/origin/mvn-repo</branch>
+                    <includes><include>**/*</include></includes>
+                    <repositoryName>SQLite-Helper</repositoryName>
+                    <repositoryOwner>KNero</repositoryOwner>
+                    <merge>true</merge>
+                </configuration>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>site</goal>
+                        </goals>
+                        <phase>deploy</phase>
+                    </execution>
+                </executions>
+                <!-- site-maven-plugin 0.7 버전에서 에러 안 나도록, 아래 내용 추가 -->
+                <dependencies>
+                    <dependency>
+                        <groupId>org.eclipse.mylyn.github</groupId>
+                        <artifactId>org.eclipse.egit.github.core</artifactId>
+                        <version>2.0.4</version>
+                    </dependency>
+                </dependencies>
             </plugin>
         </plugins>
 	</build>
